# rust-protobuf-serde-demo

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/proto/: items.proto  snazzy.items.rs
