[package]
name = "snazzy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
prost = "0.11.0"
serde = { version = "1.0.144", features = ["derive", "serde_derive"] }
serde_json = "1.0.85"

[build-dependencies]
prost-build = "0.11.1"
